# Actarsim

./: 12C_batch.mac  132Sndp.mac  132Sndp_nodraw.mac  13C_batch.mac  13Cpp13C_batch.mac  ActarSim.cc  ActarSim_PARIS2013.cc  Analysis_Angle.C  Analysis_Profile.C  Analysis_Reduce.C  Analysis_range.C  Analysis_reduce.C  Analysis_reduce3.C  CMakeLists.txt  FindROOT.cmake  GNUmakefile  INSTALL  MTrack.h  README.md  Reducer.C  SN.txt  UPDATES  actarsim.sl  dig_reaction.C  digiData.root  digit.h  digit_piotr.h  digitizationMacro.C  digitizationMacro_piotr.C  gui.mac  kine_batch.mac  p_on_D2_400mbar.root  readerPads.C  runDigitization.C  runReaderPads.C  vis2.mac  vis_actar.mac  vis_actarTPC.mac  vis_actarTPCDEMO.mac  vis_alpha.mac  (+5 more)
ActarSim-Manual/: ActarSim-Manual.tex  sec-01-installation.tex  sec-02-procedures.tex  sec-03-messengers.tex  sec-04-appendix.tex
ActarSim-Manual/figures/: layout-hexagonal.eps  layout-hexagonal.fig  layout-mayaType.eps  layout-mayaType.fig  layout-squarePads.eps  layout-squarePads.fig
build_tools/: .Doxyfile.in.swp  Doxyfile.in
doxygen/: Doxyfile  DoxygenLayout.xml  Makefile  doxy_output  mainpage.md  makehtmlfooter.sh
gases/: ArCF4_1100mbar_2000V.dat~  HeCF4_600mbar_2000V.dat~
include/: ._ActarSimAnalysisMessenger.hh  ActarSimAnalysisMessenger.hh  ActarSimBeamInfo.hh  ActarSimCinePrimGenerator.hh  ActarSimData.hh  ActarSimDecaysBuilder.hh  ActarSimDetectorConstruction.hh  ActarSimDetectorConstruction.hh_old  ActarSimDetectorMessenger.hh  ActarSimEulerTransformation.hh  ActarSimEventAction.hh  ActarSimEventActionMessenger.hh  ActarSimEventGenerator.hh  ActarSimGasDetectorConstruction.hh  ActarSimGasDetectorMessenger.hh  ActarSimGasDetectorMessenger.hh_old  ActarSimGasGeantHit.hh  ActarSimGasSD.hh  ActarSimKinePrimGenerator.hh  ActarSimParisDetectorConstruction.hh  ActarSimParisDetectorConstruction.hh_old  ActarSimParisDetectorMessenger.hh  ActarSimParisGeometry.hh  ActarSimParisHit.hh  ActarSimPhysicsList.hh  ActarSimPhysicsList.hh_old  ActarSimPhysicsListMessenger.hh  ActarSimPlaDetectorConstruction.hh  ActarSimPlaGeantHit.hh  ActarSimPlaHit.hh  ActarSimPlaSD.hh  ActarSimPrimaryGeneratorAction.hh  ActarSimPrimaryGeneratorMessenger.hh  ActarSimPrimaryInfo.hh  ActarSimROOTAnalGas.hh  ActarSimROOTAnalParis.hh  ActarSimROOTAnalPla.hh  ActarSimROOTAnalSci.hh  ActarSimROOTAnalSciRing.hh  ActarSimROOTAnalSil.hh  (+36 more)
include/.svn/: all-wcprops  entries
include/.svn/text-base/: ActarSimData.hh.svn-base  ActarSimDetectorConstruction.hh.svn-base  ActarSimDetectorMessenger.hh.svn-base  ActarSimEulerTransformation.hh.svn-base  ActarSimEventAction.hh.svn-base  ActarSimEventGenerator.hh.svn-base  ActarSimGasDetectorConstruction.hh.svn-base  ActarSimParticlesBuilder.hh.svn-base  ActarSimPhysicsList.hh.svn-base  ActarSimPhysicsListMessenger.hh.svn-base  ActarSimPrimaryGeneratorAction.hh.svn-base  ActarSimPrimaryGeneratorMessenger.hh.svn-base  ActarSimPrimaryInfo.hh.svn-base  ActarSimROOTAnalGas.hh.svn-base  ActarSimROOTAnalSci.hh.svn-base  ActarSimROOTAnalSil.hh.svn-base  ActarSimROOTAnalysis.hh.svn-base  ActarSimRunAction.hh.svn-base  ActarSimSciDetectorMessenger.hh.svn-base  ActarSimSciGeantHit.hh.svn-base  ActarSimSciHit.hh.svn-base  ActarSimSilGeantHit.hh.svn-base  ActarSimUniformEMField.hh.svn-base  ActarSimVisManager.hh.svn-base  G4EmHadronBuilder.hh.svn-base
ranges/: p_on_D2_260mbar.root  p_on_D2_500mbar.root  p_on_D2_stp.root
root_files/dig_files/: digFile.root
root_files/out_files/: Output.root
root_files/sim_files/: simFile.root
src/: ActarSimAnalysisMessenger.cc  ActarSimBeamInfo.cc  ActarSimCinePrimGenerator.cc  ActarSimData.cc  ActarSimDecaysBuilder.cc  ActarSimDetectorConstruction.cc  ActarSimDetectorConstruction.cc_old  ActarSimDetectorMessenger.cc  ActarSimDetectorMessenger.cc_old  ActarSimDict.cc  ActarSimDict.h  ActarSimEulerTransformation.cc  ActarSimEventAction.cc  ActarSimEventActionMessenger.cc  ActarSimEventGenerator.cc  ActarSimGasDetectorConstruction.cc  ActarSimGasDetectorMessenger.cc  ActarSimGasDetectorMessenger.cc_old  ActarSimGasGeantHit.cc  ActarSimGasSD.cc  ActarSimKinePrimGenerator.cc  ActarSimLinkDef.hh  ActarSimParisDetectorConstruction.cc  ActarSimParisDetectorConstruction.cc_old  ActarSimParisDetectorMessenger.cc  ActarSimParisGeometry.cc  ActarSimParisHit.cc  ActarSimPhysicsList.cc  ActarSimPhysicsList.cc_old  ActarSimPhysicsListMessenger.cc  ActarSimPlaDetectorConstruction.cc  ActarSimPlaGeantHit.cc  ActarSimPlaHit.cc  ActarSimPlaSD.cc  ActarSimPrimaryGeneratorAction.c.old  ActarSimPrimaryGeneratorAction.cc  ActarSimPrimaryGeneratorMessenger.cc  ActarSimPrimaryInfo.cc  ActarSimROOTAnalGas.cc  ActarSimROOTAnalGas.cc.old  (+52 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: ActarSimAnalysisMessenger.cc.svn-base  ActarSimBeamInfo.cc.svn-base  ActarSimCinePrimGenerator.cc.svn-base  ActarSimData.cc.svn-base  ActarSimDecaysBuilder.cc.svn-base  ActarSimDetectorConstruction.cc.svn-base  ActarSimDetectorMessenger.cc.svn-base  ActarSimEulerTransformation.cc.svn-base  ActarSimEventAction.cc.svn-base  ActarSimGasDetectorConstruction.cc.svn-base  ActarSimGasSD.cc.svn-base  ActarSimKinePrimGenerator.cc.svn-base  ActarSimLinkDef.hh.svn-base  ActarSimParticlesBuilder.cc.svn-base  ActarSimPhysicsList.cc.svn-base  ActarSimPrimaryGeneratorAction.cc.svn-base  ActarSimPrimaryGeneratorMessenger.cc.svn-base  ActarSimPrimaryInfo.cc.svn-base  ActarSimROOTAnalGas.cc.svn-base  ActarSimROOTAnalSil.cc.svn-base  ActarSimROOTAnalysis.cc.svn-base  ActarSimRunAction.cc.svn-base  ActarSimSciDetectorConstruction.cc.svn-base  ActarSimSciDetectorMessenger.cc.svn-base  ActarSimSciGeantHit.cc.svn-base  ActarSimSciSD.cc.svn-base  ActarSimSilDetectorConstruction.cc.svn-base  ActarSimSilHit.cc.svn-base  ActarSimSilSD.cc.svn-base  ActarSimSimpleTrack.cc.svn-base  ActarSimSteppingAction.cc.svn-base  ActarSimSteppingVerbose.cc.svn-base  ActarSimTrack.cc.svn-base  ActarSimUniformEMField.cc.svn-base  ActarSimVisManager.cc.svn-base  EmGammaNucleusBuilder.cc.svn-base  EmIonBinaryCascadeBuilder.cc.svn-base  G4EmHadronBuilder.cc.svn-base  G4EmMuonBuilder.cc.svn-base  (+5 more)
